Phone_special_offers

--- a/Home-part/index.html
+++ b/Home-part/index.html
@@ -109,7 +109,7 @@
     <!-- =================================SpecialOffers-Markup================================= -->
     <section class="SpecialOffers">
         <div class="container">
-            <div class="row title">
+            <div class="row">
                 <div class="col-lg-12 mb-5 ">
                     <div class="SpecialOffersTopTitle">
                         <h2 class="SpecialOffersTopTitle__text">Special Offers</h2>
