--- a/Home-part/index.html
+++ b/Home-part/index.html
@@ -61,7 +61,92 @@
 
 
     <!-- =================================Sale-Markup================================= -->
-
+    <section id="salePart">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 ">
+                    <div class="salePartwarranty">
+                        <h5 class="salePartwarranty__number">2</h5>
+                        <p class="salePartwarranty__summary">Two years warranty</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 ">
+                    <div class="salePartshipping">
+                        <picture class="salePartshipping__img">
+                            <img src="./images/Shape.png" alt="./images/Shape.png">
+                        </picture>
+                        <p class="salePartshipping_summary">Free shipping</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 ">
+                    <div class="salePartreturn">
+                        <div class="salePartreturn__icon"><i class="fa-sharp-duotone fa-solid fa-share"></i></div>
+                        <p class="salePartreturn__summary">Return policy in 30 days</p>
+                    </div>
+                </div>
+            </div>
+            <!-- ==============sale image part html ===============-->
+            <div class="salepartBottom">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="position-relative salepartBottomLeft">
+                            <picture>
+                                <img src="./images/saleimg1.png" alt="./images/saleimg1.png" class="w-100 img-fluid">
+                            </picture>
+                            <div class="overlay">
+                                <h3 class="overlaysalepartHeading">Phones Sale</h3>
+                                <div class="overlaysalepartContent">
+                                    <p class="overlaysalepartContent__title">Up to</p>
+                                    <h3 class="overlaysalepartContent__number">30%</h3>
+                                    <p class="overlaysalepartContent__summary">sale for all phones!</p>
+                                </div>
+                                <button class="overlaysalepart__button">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 ">
+                        <div class="row align-content-between h-100">
+                            <div class="col-lg-12">
+                                <div class="position-relative salepartBottomright">
+                                    <picture>
+                                        <img src="./images/saleimg2.png" alt="./images/saleimg2.png"
+                                            class="w-100 img-fluid">
+                                    </picture>
+                                    <div class="overlayRight">
+                                        <h3 class="overlaysalepartHeading">Electronics Sale</h3>
+                                        <div class="overlaysalepartContent">
+                                            <p class="overlaysalepartContent__title">Up to</p>
+                                            <h3 class="overlaysalepartContent__number">70%</h3>
+                                            <p class="overlaysalepartContent__summary">sale for all electronics!</p>
+                                        </div>
+                                        <button class="overlaysalepart__button">Shop Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class=" col-lg-12">
+                                <div class="position-relative salepartBottomright">
+                                    <picture>
+                                        <img src="./images/saleimg3.png" alt="./images/saleimg3.png"
+                                            class="w-100 img-fluid">
+                                    </picture>
+                                    <div class="overlayRight">
+                                        <h3 class="overlaysalepartHeading">Furniture Offer</h3>
+                                        <div class="overlaysalepartContent">
+                                            <p class="overlaysalepartContent__title">Up to</p>
+                                            <h3 class="overlaysalepartContent__number">50%</h3>
+                                            <p class="overlaysalepartContent__summary">sale for all furniture items!</p>
+                                        </div>
+                                        <button class="overlaysalepart__button">Shop Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- ==============sale image part html ===============-->
+        </div>
+    </section>
     <!-- =================================Sale-Markup================================= -->
 
 
@@ -96,7 +181,7 @@
 
 
     <!-- =================================BootstrapCDN-JS================================= -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <!-- =================================BootstrapCDN-JS================================= -->
