--- a/Home-part/index.html
+++ b/Home-part/index.html
@@ -93,7 +93,8 @@
                         </div>
                         <div class="categoryWrapperSearchArea">
                             <input type="text" class="categoryWrapperSearchArea__box" placeholder="Search Products">
-                            <a href="#"><i class="fa-sharp fa-solid fa-magnifying-glass categoryWrapperSearchArea__icon category--icon"></i></a>
+                            <a href="#"><i
+                                    class="fa-sharp fa-solid fa-magnifying-glass categoryWrapperSearchArea__icon category--icon"></i></a>
                         </div>
                         <div class="categoryWrapperBuyer">
                             <div class="categoryWrapperBuyer__user">
@@ -699,7 +700,111 @@
 
 
     <!-- =================================Footer-Markup================================= -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2">
+                    <div>
+                        <h5 class="MinTilte">MENU</h5>
+                        <ul class="TitleList">
+                            <li>
+                                <a href="#" class="TitleList__from">Home</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Shop</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">About</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Contact</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Journal</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div>
+                        <h5 class="MinTilte">SHOP</h5>
+                        <ul class="TitleList">
+                            <li>
+                                <a href="#" class="TitleList__from"> Category1</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Category2</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Category3</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Category4</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Category5</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div>
+                        <h5 class="MinTilte">HELP</h5>
+                        <ul class="TitleList">
+                            <li>
+                                <a href="#" class="TitleList__from">Privacy</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Terms& conditions</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Special E-shop</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Shipping</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Secure Payments</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <h5 class="MinTilte">(052) 611-5711</h5>
+                    <h6 class="SubTitle">company@domain.com</h6>
+                    <p class="Summary">575Crescent Avc.Quakertwown,PA 18951</p>
+                </div>
+                <div class="col-lg-3">
+                    <div>
+                        <h5 class="MinTilte">OREBI</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div>
+                        <ul class="FooterIcon">
+                            <li>
+                                <a href="#"><span><i class="fa-brands fa-facebook-f"></i></span></a>
+                            </li>
+                            <li>
+                                <a href="#"><span><i class="fa-brands fa-linkedin-in"></i></span></a>
+                            </li>
+                            <li>
+                                <a href="#"><span><i class="fa-brands fa-instagram"></i></i></span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div>
+                        <h6 class="SubSummary">2020 orebi Minimal eCommere Figma Template by Adveits</h6>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+    </footer>
     <!-- =================================Footer-Markup================================= -->
 
 
