--- a/Login-part/login.html
+++ b/Login-part/login.html
@@ -147,11 +147,11 @@
                         <div class="row g-lg-4">
                             <div class="col-lg-6">
                                 <div>
-                                   <form action="#">
-                                    <label for="floatingInput" class="loginForm__title">Email address</label>
-                                    <input type="email" class="loginForm__summery" id="floatingInput"
-                                        placeholder="name@example.com">
-                                   </form>
+                                    <form action="#">
+                                        <label for="floatingInput" class="loginForm__title">Email address</label>
+                                        <input type="email" class="loginForm__summery" id="floatingInput"
+                                            placeholder="name@example.com">
+                                    </form>
 
                                 </div>
                             </div>
@@ -168,7 +168,7 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <div >
+                    <div>
                         <button class="loginButton"><a href="#" class="loginButton__title">Log in</a></button>
                     </div>
 
@@ -180,26 +180,131 @@
                 </div>
 
                 <div class="col-lg-7">
-                   <div>
-                    <h2 class="login__newCustomer">New Customer</h2>
-                    <p class="login__newSummery">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the.</p>
-                    <button class="login__newButton"><a href="#" class="login__newTitle">Continue</a></button>
-                   </div>
+                    <div>
+                        <h2 class="login__newCustomer">New Customer</h2>
+                        <p class="login__newSummery">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the.</p>
+                        <button class="login__newButton"><a href="#" class="login__newTitle">Continue</a></button>
+                    </div>
                 </div>
 
-              
+
 
 
             </div>
     </section>
-    
+
     <!-- =================================Login-Markup================================= -->
 
 
 
 
     <!-- =================================Footer-Markup================================= -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2">
+                    <div>
+                        <h5 class="MinTilte">MENU</h5>
+                        <ul class="TitleList">
+                            <li>
+                                <a href="#" class="TitleList__from">Home</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Shop</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">About</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Contact</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Journal</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div>
+                        <h5 class="MinTilte">SHOP</h5>
+                        <ul class="TitleList">
+                            <li>
+                                <a href="#" class="TitleList__from"> Category1</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Category2</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Category3</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Category4</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Category5</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div>
+                        <h5 class="MinTilte">HELP</h5>
+                        <ul class="TitleList">
+                            <li>
+                                <a href="#" class="TitleList__from">Privacy</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Terms& conditions</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Special E-shop</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Shipping</a>
+                            </li>
+                            <li>
+                                <a href="#" class="TitleList__from">Secure Payments</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <h5 class="MinTilte">(052) 611-5711</h5>
+                    <h6 class="SubTitle">company@domain.com</h6>
+                    <p class="Summary">575Crescent Avc.Quakertwown,PA 18951</p>
+                </div>
+                <div class="col-lg-3">
+                    <div>
+                        <h5 class="MinTilte">OREBI</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div>
+                        <ul class="FooterIcon">
+                            <li>
+                                <a href="#"><span><i class="fa-brands fa-facebook-f"></i></span></a>
+                            </li>
+                            <li>
+                                <a href="#"><span><i class="fa-brands fa-linkedin-in"></i></span></a>
+                            </li>
+                            <li>
+                                <a href="#"><span><i class="fa-brands fa-instagram"></i></i></span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div>
+                        <h6 class="SubSummary">2020 orebi Minimal eCommere Figma Template by Adveits</h6>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+    </footer>
     <!-- =================================Footer-Markup================================= -->
 
 
